# video-generator

./: .gitignore  pyproject.toml
.bolt/: PROJECT.md  STATE.md
.bolt/v1/: IDEA.md  ROADMAP.md  STATE.md
.bolt/v1/phases/01-project-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md
.bolt/v1/phases/02-rendering-engine/: 02-01-PLAN.md  02-01-SUMMARY.md
.bolt/v1/phases/03-visual-presets/: 03-01-PLAN.md  03-01-SUMMARY.md
.bolt/v1/phases/04-loop-extension/: 04-01-PLAN.md  04-01-SUMMARY.md
.bolt/v1/phases/05-tui-polish/: 05-01-PLAN.md  05-01-SUMMARY.md
.bolt/v1/phases/06-visual-quality/: 06-01-PLAN.md  06-01-SUMMARY.md
scripts/: test_loop.py  test_pipeline.py  test_presets.py  test_render.py
src/video_generator/: __init__.py  __main__.py  config.py  effects.py  ffmpeg.py  generate.py  layers.py  loop.py  particles.py  presets.py  render.py  shaders.py  time_loop.py  tui.py  ui.py
